# picoprom

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  configs.c  configs.h  eeprom.c  eeprom.h  picoprom.c  picoprom.h  xmodem.c  xmodem.h
adapters/atari2600/: fp-lib-table  picoprom-atari2600.kicad_pcb  picoprom-atari2600.kicad_prl  picoprom-atari2600.kicad_pro  picoprom-atari2600.kicad_sch
adapters/atari2600/case/: picoprom-atari2600.FCStd  picoprom-atari2600.stl
adapters/atari2600/picoprom-atari2600.pretty/: EdgeConnector_2x12_P2.54mm_Vertical.kicad_mod
adapters/mask-rom/: fp-lib-table  picoprom-mask-rom.kicad_pcb  picoprom-mask-rom.kicad_prl  picoprom-mask-rom.kicad_pro  picoprom-mask-rom.kicad_sch  picoprom-mask-rom.kicad_sym  sym-lib-table
adapters/mask-rom/picoprom-mask-rom.pretty/: PicoPROM_DIP-28_W15.24mm.kicad_mod
case/: bottom.stl  picoprom.FCStd  top.stl
hardware/: README.md  fp-lib-table  picoprom.kicad_pcb  picoprom.kicad_prl  picoprom.kicad_pro  picoprom.kicad_sch  sym-lib-table
hardware/libraries/: picoprom.kicad_sym
hardware/libraries/picoprom.pretty/: QR-Code_12x12mm_SilkScreen.kicad_mod
include/: command.hpp  config.hpp  configs.hpp  eeprom.hpp  picoprom.hpp  rom.hpp  storage.hpp
lib/: CMakeLists.txt
src/: config.cpp  configs.cpp  eeprom.cpp  picoprom.cpp  rom.cpp  storage.cpp
